# boson-light.cpp

./: .gitignore  CMakeLists.txt  README.md  config.json.example
src/: CMakeLists.txt
src/boson/: ChatProvider.cpp  ChatProvider.hpp  ChatSite.hpp  Main.cpp
src/boson/data/: TitleProvider.hpp
src/boson/util/: FilterSpec.hpp  Parsing.hpp
